# amc-quiz

./: .gitignore  README.md  amc_study.tcss  art.py  db.py  generate.py  main.py  pyproject.toml  quiz.py  review.py  tui.py
